# data-analyst-test

./: .gitignore  README.md  pyproject.toml
notebook/: ml_anti_fraud.ipynb
src/: controllers.py  main.py  models.py  services.py  utils.py
src/model_ml/: anti_fraud_model.pkl  preprocessor.pkl
