[tool.poetry]
name = "data-analyst-test"
version = "0.1.0"
description = ""
authors = [ "Stefani <stefani.barros28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
joblib = "^1.4.2"
fastapi = "^0.115.0"
scikit-learn = "1.6.1"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
